style(frontend): update visual layout and styling for IncomingCallModal; fix scrollbar display bug

--- a/frontend/src/components/modals/IncomingCallModal/IncomingCallModal.module.scss
+++ b/frontend/src/components/modals/IncomingCallModal/IncomingCallModal.module.scss
@@ -14,15 +14,14 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 10px;
 	width: 100%;
 	border: 2px solid;
 	border-color: #fff #262626 #262626 #fff;
-	padding: 50px 70px;
+	padding: 20px 56px;
 	box-shadow:
 		inset 1px 1px #fff,
 		inset -2px -2px #7e7e7e;
-	background-color: #004aad;
+	background-color: #9acdaf;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -36,6 +35,25 @@
 	width: 100%;
 	color: #fff;
 }
+
+.participantUsername {
+	color: #fff;
+	line-height: 1.1;
+	letter-spacing: 2px;
+	text-shadow:
+		-2px -2px 0 #000,
+		2px -2px 0 #000,
+		-2px 2px 0 #000,
+		2px 2px 0 #000,
+		4px 4px 0 #000;
+}
+
+.captionBox {
+	margin-bottom: 10px;
+	padding: 10px;
+	background-color: #000;
+}
+
 
 .highlightText {
 	color: #ff6b6b;
