--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -95,8 +95,3 @@ body *::-webkit-scrollbar-button:single-button:horizontal:increment {
 body *::-webkit-scrollbar-corner {
 	background: silver;
 }
-
-* {
-	scrollbar-width: auto;
-	scrollbar-color: silver #dfdfdf;
-}
